fix text wrap values

--- a/src/widgets/sidebar/ui/sidebar.module.scss
+++ b/src/widgets/sidebar/ui/sidebar.module.scss
@@ -41,7 +41,7 @@
     font-weight: 500;
     line-height: 24px;
     text-align: left;
-    text-wrap: nowrap;
+    text-wrap: none;
     letter-spacing: 0;
 
     &:nth-child(6) {
@@ -71,7 +71,7 @@
 .linkWrapperActive {
   display: flex;
   color: var(--color-info-700);
-  text-wrap: nowrap;
+  text-wrap: none;
 
   svg {
     margin-right: 10px;
